--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -13,6 +13,6 @@ html(lang="en")
   body(class=pageClass)
     .wrapper
       include ../includes/modules/header
-      .content-wrapper
+      .main
         block content
       include ../includes/modules/footer
