--- a/src/assets/scss/modules/footer.scss
+++ b/src/assets/scss/modules/footer.scss
@@ -1,4 +1,5 @@
 footer {
+  flex: 0 0 auto;
   height: 100px;
-  background-color: aquamarine;
+  background: linear-gradient(#6ee052, #000000 );
 }
