--- a/src/assets/scss/utils/mixins.scss
+++ b/src/assets/scss/utils/mixins.scss
@@ -31,3 +31,18 @@
     @content;
   }
 }
+
+@mixin btnStyles {
+  border-radius: 8px;
+  border: 2px solid #000000;
+  color: #201d45;
+  outline: none;
+  padding: 0.4rem 1rem;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.3 ease;
+  font-weight: bold;
+  &:hover {
+    background-color: #0010ee31;
+  }
+}
