--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -7,7 +7,7 @@ $mainFontSize: 18px;
 $mainFontWeight: 400;
 $mainLineHeight: 1.4;
 
-$desktopWidth: 1280px;
+$desktopWidth: 1200px;
 $smDesktopWidth: 980px;
 $tableWidth: 768px;
 $phoneWidth: 480px;
@@ -21,3 +21,4 @@ $danger-color: #fc5c65;
 $warning-color: #fed330;
 $light-color: #999999;
 $purple-color: #8854d0;
+$span-color: #a5366f;
