--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -1,4 +1,4 @@
 
-header
-  .header-container
-    h1.tittle Welcome to the best search engine for github users!
+header.header
+  .container
+    h1.tittle Find user on JSONPlaceHolder
