--- a/src/assets/scss/modules/result-find.scss
+++ b/src/assets/scss/modules/result-find.scss
@@ -11,7 +11,13 @@
       margin-bottom: 2em;
     }
     .result-cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-auto-rows: 190px;
+      grid-column-gap: 10px;
+      grid-row-gap: 20px;
       &__item {
+        position: relative;
         border: 1px solid #000;
         border-radius: 8px;
         padding: .7rem;
@@ -20,6 +26,12 @@
         &-tittle, &-id, &-completed {
           font-size: 0.8rem;
           border-bottom: 1px solid #0000006e;
+        }
+        &-img {
+          position: absolute;
+          max-width: 30%;
+          top: 0;
+          right: 0;
         }
       }
     }
@@ -38,11 +50,4 @@
 
 .result-delete__active{
   display: block !important;
-}
-.result-cardsAll {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 190px;
-  grid-column-gap: 10px;
-  grid-row-gap: 20px;
 }
