--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,12 +7,12 @@ block content
   section.search-engine
     .container 
       .find
-        .find__text Привет, уважаемый посетитель сайта. Сейчас ты находишься на #[span.color-text единственном] портале, который способен выдать информацию о #[span.color-text 200] пользователях сервиса JSONPlaceholder. Чтобы получить всевозможные данные о пользователе с сайта - #[span.color-text "https://jsonplaceholder.typicode.com"], вам достаточно ввести его персональный id (от 1 до 200) и нажать на кнопку поиска, либо же вывести #[span.color-text всех одним разом] для получения уникальной информации. 
-        input.find__input(type="number" placeholder="введите номер ID")
-        button.find__btn найти по номеру ID
+        .find__text Привет, уважаемый посетитель сайта. Сейчас ты находишься на #[span.color-text единственном] портале, который способен выдать информацию о #[span.color-text 200] ToDo-shkah сервиса JSONPlaceholder. Чтобы получить всевозможные данные о задачках с сайта - #[span.color-text "https://jsonplaceholder.typicode.com"], вам достаточно ввести id (от 1 до 200) и нажать на кнопку поиска, либо же вывести #[span.color-text все одним разом] для получения уникальной информации. 
+        input.find__input(type="number" placeholder="введите номер Todo")
+        button.find__btn найти по номеру Todo
   section.result-find
     .container
-      button.result-find__btnAll показать всех пользователей
+      button.result-find__btnAll показать все Todo
       .result-cards
       .result-delete
         button.result-delete__btn очистить поле
