--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,6 +12,7 @@ block content
         button.find__btn найти по номеру Todo
   section.result-find
     .container
+      div(id="loader")
       button.result-find__btnAll показать все Todo
       .result-cards
       .result-delete
